--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Content/styles/components/grid.scss
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Content/styles/components/grid.scss
@@ -20,6 +20,11 @@
 		}
 	}
 
+	&__bulk-actions
+	{
+		margin-top: var(--u-grid-spacing, $defaultSpacing);
+	}
+
 	&__results
 	{
 		margin-top: var(--u-grid-spacing, $defaultSpacing);
