--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -129,17 +129,27 @@
                                 <tr class="u-grid__item @ItemCssClass @(isCurrentItemSelected ? "u-grid__item--selected" : "")">
                                     @if (ShowCheckboxSelectColumn)
                                     {
+                                        string id = Guid.NewGuid().ToString("N");
+
                                         <th class="u-grid__item-checkbox">
                                             <div class="u-checkbox">
-                                                <input type="checkbox" @bind="selectableItem.IsSelected" class="u-checkbox__input" />
+                                                <input type="checkbox" id="@id" @bind="selectableItem.IsSelected" class="u-checkbox__input" />
+                                                <label for="@id" class="u-checkbox__label">
+                                                    <span class="sr-only">@item?.ToString()</span>
+                                                </label>
                                             </div>
                                         </th>
                                     }
                                     @if (ShowRadioSelectColumn)
                                     {
+                                        string id = Guid.NewGuid().ToString("N");
+
                                         <th class="u-grid__item-radio">
                                             <div class="u-radio">
-                                                <input type="radio" name="@groupName" checked="@(SelectedRow?.Equals(item))" @onchange="(() => SelectedRow = item)" class="u-radio__input" />
+                                                <input type="radio" id="@id" name="@groupName" checked="@(SelectedRow?.Equals(item))" @onchange="(() => SelectedRow = item)" class="u-radio__input" />
+                                                <label class="u-radio__label" for="@id">
+                                                    <span class="sr-only">@item?.ToString()</span>
+                                                </label>
                                             </div>
                                         </th>
                                     }
@@ -166,15 +176,11 @@
                         <div class="u-grid__item @ItemCssClass @(isCurrentItemSelected ? "u-grid__item--selected" : "")">
                             @if (ShowCheckboxSelectColumn)
                             {
-                                <div class="u-grid__item-checkbox">
-                                    <input type="checkbox" @bind-value="selectableItem.IsSelected" checked="@(selectableItem!.Equals(item))" />
-                                </div>
+                                <span>TODO</span>
                             }
                             @if (ShowRadioSelectColumn)
                             {
-                                <div class="u-grid__item-radio">
-                                    <input type="radio" name="@groupName" @bind-value="SelectedRow" checked="@(SelectedRow!.Equals(item))" />
-                                </div>
+                                <span>TODO</span>
                             }
                             @Columns?.Invoke(item)
                         </div>
