--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -111,7 +111,7 @@
                                 {
                                     <th></th>
                                 }
-                                @foreach (var column in ColumnDefinitions)
+                                @foreach (var column in ColumnDefinitions.Where(x => x.DisplayMode == UmbrellaColumnDisplayMode.Full))
                                 {
                                     <th @attributes="column.AdditionalAttributes">
                                         @if (column.Sortable)
