Initial changes to the UmbrellaGrid with .NET 6 changes.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaColumn.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaColumn.razor
@@ -1,4 +1,6 @@
-﻿@if (!ScanMode && DisplayMode == UmbrellaColumnDisplayMode.Full)
+﻿@typeparam TItem
+
+@if (!ScanMode && DisplayMode == UmbrellaColumnDisplayMode.Full)
 {
 	@if (IsFirstColumn)
 	{
