--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -1,12 +1,13 @@
 ﻿@typeparam TItem
 
 @{
+    #pragma warning disable CS8625
     string groupName = Guid.NewGuid().ToString("N");
 }
 
 <CascadingValue Value="this">
     <div class="u-grid">
-        @if (!ColumnScanComplete && RenderMode == UmbrellaGridRenderMode.Full)
+        @if (!ColumnScanComplete && RenderMode == UmbrellaGridRenderMode.Table)
         {
             <CascadingValue Name="ScanMode" Value="true">
                 @Columns?.Invoke(default!)
@@ -70,7 +71,7 @@
         }
         else if (CurrentState == LayoutState.Success)
         {
-            @if (RenderMode is UmbrellaGridRenderMode.Full)
+            @if (RenderMode is UmbrellaGridRenderMode.Table)
             {
                 <div class="u-grid__results-container">
                     <table class="u-grid__results @GridCssClass">
@@ -137,7 +138,7 @@
                                 var selectableItem = SelectableItems.Find(x => x.Item!.Equals(item))!;
                                 var isCurrentItemSelected = (ShowCheckboxSelectColumn && selectableItem.IsSelected) || (ShowRadioSelectColumn && item!.Equals(SelectedRow));
 
-                                <tr class="u-grid__item @ItemCssClass @(isCurrentItemSelected ? "u-grid__item--selected" : "") @(isCurrentItemSelected && !string.IsNullOrWhiteSpace(ItemSelectedCssClass) ? ItemSelectedCssClass : "")">
+                                <tr @key="item" class="u-grid__item @ItemCssClass @(isCurrentItemSelected ? "u-grid__item--selected" : "") @(isCurrentItemSelected && !string.IsNullOrWhiteSpace(ItemSelectedCssClass) ? ItemSelectedCssClass : "")">
                                     @if (ShowCheckboxSelectColumn)
                                     {
                                         string id = Guid.NewGuid().ToString("N");
@@ -176,7 +177,7 @@
                     <UmbrellaPagination SmallPagination="@SmallPagination" OnOptionsChanged="OnPaginationOptionsChangedAsync" @ref="PaginationInstance" />
                 }
             }
-            else if (RenderMode is UmbrellaGridRenderMode.Slim)
+            else if (RenderMode is UmbrellaGridRenderMode.CollectionView)
             {
                 <div class="u-grid__results @GridCssClass">
                     @foreach (var item in Items)
