--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Content/styles/components/grid.scss
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Content/styles/components/grid.scss
@@ -46,6 +46,7 @@
 					display: flex;
 					align-items: center;
 					white-space: nowrap;
+					text-decoration: none;
 
 					&:hover,
 					&:active
